# HFTminion

./: .gitignore  PROJECT_DETAILS.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  connectors.py  data.py  db.py  main.py  models.py  schemas.py  scoring.py  seed.py
apps/api/app/repositories/: __init__.py  feature_repository.py  feed_repository.py  incident_repository.py  ingestion_repository.py  metrics_repository.py  replay_repository.py
apps/api/app/services/: __init__.py  current_state.py  incident_service.py  ingestion_service.py  live_connectors.py  live_registry.py  live_vendor.py
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 20260427_0001_initial_persistence.py
apps/api/tests/: test_api.py
apps/web/: package-lock.json  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: app-shell.tsx  feed-live-panel.tsx  incidents-table.tsx  metric-card.tsx  overview-live-panel.tsx  reliability-chart.tsx
apps/web/src/lib/: api.ts  mock-data.ts  (+1 more)
docs/: 2026-04-26-altdata-reliability-os-plan.md  adr-0001-stitch-to-code-workflow.md
docs/superpowers/plans/: 2026-04-27-live-vendor-replacement.md
docs/superpowers/specs/: 2026-04-27-live-vendor-replacement-design.md
infra/terraform/: main.tf  outputs.tf  variables.tf
services/: __init__.py
services/ingest/: __init__.py  connectors.py
services/scorer/: __init__.py  scoring.py
services/scorer/tests/: test_scoring.py
(+7 files in other folders)
